# cluster-facil

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  comparacao_sklearn.md  pyproject.toml
docs/: Makefile  api.md  conf.py  index.md  requirements.txt  usage.md
docs/source/api/: cluster_facil.cluster.rst  cluster_facil.rst  modules.rst
examples/: uso_basico.ipynb
src/cluster-facil/: cluster.py  teste.py
src/cluster_facil/: __init__.py  cluster.py  utils.py  utils_auto_label.py  validations.py
